Issue #3352379: Diff changes are hardly readable when using dark mode

--- a/styles/base/_system-diff.scss
+++ b/styles/base/_system-diff.scss
@@ -28,7 +28,7 @@ table.diff {
 
       .gin--dark-mode & {
         .diffchange {
-          color: var(--gin-color-danger-light);
+          color: var(--gin-color-button-text);
         }
       }
     }
@@ -44,7 +44,7 @@ table.diff {
         background: var(--gin-bg-green);
 
         .diffchange {
-          color: var(--gin-color-green-lightest);
+          color: var(--gin-color-button-text);
         }
       }
     }
